deployment-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: aurlaw-react-core
  # namespace: aurlawcom
spec:
  selector:
    app: aurlaw-react-core
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurlaw-react-core-local
  # namespace: aurlawcom
  labels:
    app: aurlaw-react-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aurlaw-react-core
  template:
    metadata:
      labels:
        app: aurlaw-react-core
    spec:
      containers:
      - name: aurlaw-react-core
        # namespace: aurlawcom
        image: aurlaw/aspnetreact:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
